--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
     "axios": "^1.4.0",
+    "date-fns": "^2.30.0",
     "mongoose": "^7.1.0",
     "next": "13.3.2",
+    "notistack": "^3.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.0.4",
